--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -1,8 +1,7 @@
 .service{
-   border: 1px solid rgba(13, 0, 255, 0.283);
    border-radius: 3px;
-   padding-bottom: 10px;
    text-align: center;
+   background-color:rgba(0, 0, 0, 0.082);
 }
 .service img{
    border-radius: 3px;
