--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -1,6 +1,8 @@
 .services-container h1 {
    text-align: center;
-   color: rgb(204, 13, 13);
+   font-weight: 700;
+   color:rgb(5, 45, 120);
+   font-size: 60px;
 }
 .service-container{
    display: grid;
